set up html and css for the app

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>X Post</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1>(X)</h1>
+    <div id="container">
+    <textarea
+      id="text"
+      placeholder="Write your X post here..."
+    >
+    </textarea>
+    <ul id="post">
+      - (X) Posts -
+    </ul>
 
+    <button id="btn">Post</button>
+</div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
