set up firebase and click event to post on X

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       placeholder="Write your X post here..."
     >
     </textarea>
+        <button id="btn">Post</button>
     <ul id="post">
       - (X) Posts -
     </ul>
 
-    <button id="btn">Post</button>
 </div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
