--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
   <body>
     <h1>(X)</h1>
     <div id="container">
-    <textarea
-      id="text"
-      placeholder="Write your X post here..."
-    >
-    </textarea>
-        <button id="btn">Post</button>
-    <ul id="post">
-      - (X) Posts -
-    </ul>
+      <textarea id="text" placeholder="Write your X post here..."> </textarea>
+      <input class ="input-name" type="text" placeholder="From" />
+      <input class ="input-name" type="text" placeholder="To" />
 
-</div>
+      <button id="btn">Post</button>
+      <ul id="post"></ul>
+    </div>
     <script src="script.js" type="module"></script>
   </body>
 </html>
