--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h1>(X)</h1>
     <div id="container">
       <textarea id="text" placeholder="Write your X post here..."> </textarea>
-      <input class ="input-name" type="text" placeholder="From" />
-      <input class ="input-name" type="text" placeholder="To" />
-
+      <div id="input">
+      <input class ="input from" type="text" placeholder="From" />
+      <input class ="input to" type="text" placeholder="To" />
+</div>
       <button id="btn">Post</button>
       <ul id="post"></ul>
     </div>
